--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="EsqSenha">Redefinir Senha</string>
+    <string name="VoltarLog">Login</string>
     <string name="Cadastro">Cadastra-se</string>
     <string name="uso">uso</string>
     <string name="Fazerlogin">uso</string>
